<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="#000000">


    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:id="@+id/textViewNombre"
        android:hint="@string/nombre"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:id="@+id/textViewApellido"
        android:hint="@string/apellidos"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enviar_datos"
        android:id="@+id/buttonEnviarResultados"
        android:layout_gravity="center_horizontal" />

</LinearLayout>